[gd_scene load_steps=27 format=2]

[ext_resource path="res://addons/enjin/example/art/slime/slime-attack-3.png" type="Texture" id=1]
[ext_resource path="res://addons/enjin/example/art/slime/slime-idle-3.png" type="Texture" id=2]
[ext_resource path="res://addons/enjin/example/art/slime/slime-die-2.png" type="Texture" id=3]
[ext_resource path="res://addons/enjin/example/art/slime/slime-move-1.png" type="Texture" id=4]
[ext_resource path="res://addons/enjin/example/art/slime/slime-idle-0.png" type="Texture" id=5]
[ext_resource path="res://addons/enjin/example/art/slime/slime-move-3.png" type="Texture" id=6]
[ext_resource path="res://addons/enjin/example/art/slime/slime-hurt-0.png" type="Texture" id=7]
[ext_resource path="res://addons/enjin/example/art/slime/slime-die-1.png" type="Texture" id=8]
[ext_resource path="res://addons/enjin/example/art/slime/slime-attack-4.png" type="Texture" id=9]
[ext_resource path="res://addons/enjin/example/art/slime/slime-hurt-3.png" type="Texture" id=10]
[ext_resource path="res://addons/enjin/example/art/slime/slime-attack-1.png" type="Texture" id=11]
[ext_resource path="res://addons/enjin/example/art/slime/slime-idle-1.png" type="Texture" id=12]
[ext_resource path="res://addons/enjin/example/art/slime/slime-move-2.png" type="Texture" id=13]
[ext_resource path="res://addons/enjin/example/art/slime/slime-move-0.png" type="Texture" id=14]
[ext_resource path="res://addons/enjin/example/art/slime/slime-attack-0.png" type="Texture" id=15]
[ext_resource path="res://addons/enjin/example/art/slime/slime-idle-2.png" type="Texture" id=16]
[ext_resource path="res://addons/enjin/example/art/slime/slime-attack-2.png" type="Texture" id=17]
[ext_resource path="res://addons/enjin/example/art/slime/slime-die-3.png" type="Texture" id=18]
[ext_resource path="res://addons/enjin/example/art/slime/slime-die-0.png" type="Texture" id=19]
[ext_resource path="res://addons/enjin/example/art/slime/slime-hurt-1.png" type="Texture" id=20]
[ext_resource path="res://addons/enjin/example/art/slime/slime-hurt-2.png" type="Texture" id=21]
[ext_resource path="res://addons/enjin/example/scripts/client/Slime.gd" type="Script" id=22]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 5 ), ExtResource( 12 ), ExtResource( 16 ), ExtResource( 2 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 19 ), ExtResource( 8 ), ExtResource( 3 ), ExtResource( 18 ) ],
"loop": false,
"name": "death",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ), ExtResource( 20 ), ExtResource( 21 ), ExtResource( 10 ) ],
"loop": false,
"name": "hurt",
"speed": 5.0
}, {
"frames": [ ExtResource( 14 ), ExtResource( 4 ), ExtResource( 13 ), ExtResource( 6 ) ],
"loop": true,
"name": "move",
"speed": 5.0
}, {
"frames": [ ExtResource( 15 ), ExtResource( 11 ), ExtResource( 17 ), ExtResource( 1 ), ExtResource( 9 ) ],
"loop": false,
"name": "attack",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 17.0
height = 34.0

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 9, 30 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 9, 30 )

[node name="Slime" type="KinematicBody2D"]
position = Vector2( -372, -167 )
collision_layer = 8
collision_mask = 0
script = ExtResource( 22 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, 7.62939e-06 )
scale = Vector2( 3, 3 )
frames = SubResource( 1 )
animation = "move"
frame = 1
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -3, 20 )
rotation = 1.5708
shape = SubResource( 2 )

[node name="LeftGroundRay" type="RayCast2D" parent="."]
position = Vector2( -20, 16 )
rotation = 0.785398
enabled = true
collision_mask = 2

[node name="RightGroundRay" type="RayCast2D" parent="."]
position = Vector2( 21, 17 )
rotation = -0.785398
enabled = true
collision_mask = 2

[node name="AttackLeft" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackLeft"]
position = Vector2( -51, 6 )
shape = SubResource( 3 )

[node name="AttackRight" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackRight"]
position = Vector2( 51, 6 )
shape = SubResource( 4 )
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_animation_complete"]
[connection signal="frame_changed" from="AnimatedSprite" to="." method="_on_frame_change"]
